--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "legal-firm-website",
+  "name": "hjslegal",
   "version": "1.0.0",
   "description": "Legal firm website",
   "main": "index.js",
